# job-radar

./: .env.example  .gitignore  README.md  pyproject.toml  spec.md
src/: config.py  conftest.py  main.py  main_test.py  models.py  storage.py  storage_test.py
src/agents/: _utils.py  _utils_test.py  cover_letter.py  cover_letter_test.py  ranker.py  ranker_test.py  scorer.py  scorer_test.py  scraper.py  scraper_test.py
src/routers/: agents.py  agents_test.py  cover_letters.py  cover_letters_test.py  jobs.py  jobs_test.py  profile.py  profile_test.py  search_config.py  search_config_test.py  settings.py  settings_test.py
src/sources/: base.py  platsbanken.py  platsbanken_test.py
static/: index.html  style.css
static/i18n/: de.json  en.json  es.json  fr.json  pl.json  sv.json
