[project]
name = "jobradar"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-ai>=1.0",
    "groq>=1.0",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pdfplumber>=0.11",
    "fpdf2>=2.8",
    "python-multipart>=0.0.20",
    "truststore>=0.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 79

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
